# Podcast_generator

./: .coveragerc  .env.example  .gitignore  CHANGELOG.md  DEVELOPERS.md  Dockerfile  LICENSE  Podcast Creator.spec  Podcast Generator.spec  README-UTILISATEUR.txt  README.md  about_window.py  api_keys_window.py  app.py  config.py  create_demo.py  demo_window.py  docker-compose.prod.yml  docker-compose.yml  docker_push.sh  generate_gemini_samples.sh  generate_podcast.py  gui.py  pyproject.toml  requirements.txt  settings.json  settings_window.py  setup.py  template.env  transcript_analyzer.py  utils.py  voice_classifier.py
.github/workflows/: dependency-submission.yml  release.yml  test.yml
config/: analysis_prompt.txt.example
demo/: who_am_i_gemini.html
docs/: DEVELOPERS-fr.md  DEVELOPERS.md  README-fr.md  _config.yml  demo_template.html  index.html  index.md  who_am_i.html
docs/_includes/: dark-mode.html  header.html
docs/_layouts/: page.html
docs/_pages/: index.md
docs/assets/: who_am_i.html
docs/en/: index.html  index.md
docs/fr/: index.html  index.md
samples/: script.txt  script2.txt
samples/gemini_voices/: README.txt  voice_classifications.json
static/: manifest.webmanifest  sw.js
templates/: index.html
tests/: README.md  __init__.py  conftest.py  test_api_endpoints.py  test_api_status.py  test_create_demo.py  test_filename_extraction.py  test_gemini_model.py  test_integration.py  test_utils.py  test_utils_extra.py  test_validation.py
